Make sure plus sign does not overlap with text

--- a/src/assets/css/index.pcss
+++ b/src/assets/css/index.pcss
@@ -58,6 +58,9 @@ details > div {
 details > div p:last-of-type {
   @apply mb-0;
 }
+summary > span {
+  @apply inline-block mr-5;
+}
 summary {
   @apply text-base mt-6 pb-4 border-b border-gray-300 cursor-pointer select-none;
 }
